--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web.loader.js";
+      var loaderUrl = buildUrl + "/WebGL_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web.data.unityweb",
-        frameworkUrl: buildUrl + "/web.framework.js.unityweb",
-        codeUrl: buildUrl + "/web.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGL_build.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGL_build.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGL_build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RaccoonFranchise",
         productName: "RaccoonRun",
